stop bounce scrolling on ios

--- a/treb-embed/style/grid.scss
+++ b/treb-embed/style/grid.scss
@@ -84,6 +84,8 @@
     -webkit-tap-highlight-color: transparent;
     outline: none;
 
+    overscroll-behavior: none;
+
     // --- merging from old (split) layout ---
 
     display: grid;
